<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Software Updates</string>

    <!-- Main preference screen strings -->
    <string name="preference_title_check_for_updates">Check for updates</string>
    <string name="preference_summary_check_for_updates">Prefer downloading over Wi-Fi where possible to avoid surcharges on your data plan.</string>

    <string name="install_update">Install Update</string>
    <string name="update_available">Update Available</string>
    <string name="software_version">Version: %1$s</string>
    <string name="not_now">Not now</string>
    <string name="download_update">Download Update</string>
    <string name="verification_failed">Update verification failed, please retry…</string>
    <string name="latest_version_already_installed">The latest version is already installed…</string>
    <string name="update_succeeded">Device Updated</string>
    <string name="update_failed">Device Update Failed</string>
    <string name="update_succeeded_content">Your device is now running the latest available version.</string>
    <string name="update_failed_content">There was an error while updating your device, make sure it is fully charged and retry.</string>
    <string name="finalizing_the_update">Finalizing the update</string>
    <string name="reboot">Reboot</string>
    <string name="release_notes">An update needs to be installed for proper functioning of the device. Please ensure good Internet connectivity</string>
    <string name="installing_update">The update is now being installed. The Arc will restart automatically.</string>
    <string name="downloading_format">Downloading %d%%</string>
</resources>
